--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="image/ban1.jpg" class="d-block w-100" alt="...">
+            <img src="/image/ban1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>loudi</h5>
               <p>
