--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!--on a changé me par ms-->
               <li class="nav-item px-5"> <!-- "px"  marge à gauche et à droite-->
-                <a class="nav-link activ" aria-current="page" href="#">Acceuil</a>
+                <a class="nav-link activ" aria-current="page" href="#">porte</a>
               </li>
               <li class="nav-item px-5">
                 <a class="nav-link" href="#">Contacts</a><!--ici j'ai changé la couleur du texte du lien -->
