--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- sticky-top  la narve barre reste fixe -->
     <nav class="navbar navbar-expand-lg sticky-top " style="background-image: url(images/nav.png);background-color: lime;">
         <div class="container-fluid">
-          <a class="navbar-brand ms-3" href="#"><img src="/images/logo.png" alt="" width="40"></a>
+          <a class="navbar-brand ms-3" href="#"><img src="images/logo.png" alt="" width="40"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -55,7 +55,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/image/ban1.jpg" class="d-block w-100" alt="...">
+            <img src="image/ban1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>loudi</h5>
               <p>
