--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="col-lg-3 col-md-6">
             <!-- on retire toujours le style de la card et ne pas oublier le format de l'ecran -->
             <div class="card mb-3 " >
-              <img src="/image/ban1.jpg" class="card-img-top" alt="...">
+              <img src="../image/ban1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">le primaire</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -121,7 +121,7 @@
           <div class="col-lg-3  col-md-6">
             <!-- on retire toujours le style de la card -->
             <div class="card mb-3" >
-              <img src="/image/ban2.jpg" class="card-img-top" alt="...">
+              <img src="../image/ban2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">le secondaire</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
